@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Class-IntrospectionMethods
-version:      1.002
+version:      1.003
 version_from: 
 installdirs:  site
 requires:
